# truthexpiry

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.lifecycle-mcp  LICENSE  README.md  REVIEW.md  app.py  app_oauth.py  docker-compose.yml  manifest.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: containers.yml  ruff.yml  security.yml  tests.yml
adapters/: __init__.py  composition.py
adapters/fakes/: __init__.py  lifecycle.py  llm.py  rts.py  slack.py  synthetic_data.py
adapters/lifecycle_mcp/: __init__.py  adapter.py  client.py  errors.py  http_client.py  mapper.py  sync_bridge.py
adapters/llm/: __init__.py  adapter.py  contracts.py  errors.py  failure_categories.py  fallback_evidence.py  mapper.py  prompt.py  query_hints.py  runner.py  scope_hints.py
adapters/slack_rts/: __init__.py  adapter.py  client.py  contracts.py  errors.py  mapper.py
agent/: agent.py  extraction_agent.py
docs/: MILESTONE_1.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md  SCAFFOLD_INSPECTION.md
docs/architecture/: truthexpiry-architecture.mmd
docs/assets/: README.md
docs/demo/: README.md  live-acceptance.md  preflight.md  (+3 more)
lifecycle_mcp/: __init__.py  bearer_auth.py  contracts.py  http_server.py  repository.py  server.py  server_settings.py  smoke.py  structural_check.py
listeners/: __init__.py  slack_events.py  status_copy.py  truthexpiry_handler.py
scripts/: demo_preflight.py  seed_demo_workspace.py
tests/: conftest.py  test_view_builders.py
truthexpiry/: __init__.py
(+122 files in other folders)
