[project]
name = "truthexpiry"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk==3.42.0",
    "slack-bolt==1.28.0",
    "slack-cli-hooks==0.3.0",
    "pydantic-ai[openai]==1.107.0",
    "python-dotenv==1.2.2",
    "mcp>=1.28.1,<2",
]

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
]
dev = [
    "truthexpiry[test]",
    "ruff==0.15.20",
    "mypy==1.15.0",
    "pip-audit==2.9.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "listeners*", "truthexpiry*", "adapters*", "lifecycle_mcp*"]

[tool.setuptools.package-data]
lifecycle_mcp = ["data/*.json"]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:flake8"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
